<resources>
    <string name="app_name">Pickcourt</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="email">Email</string>
    <string name="enter_as_guest">Enter as Guest</string>
    <string name="google_button_sign_in">Google Button Sign in</string>
    <string name="facebook_button_sign_in">Facebook Button Sign in</string>
    <string name="forgot_password_click_to_reset">Forgot Password? Click to reset</string>
    <string name="facebook_app_id">429311136106230</string>
    <string name="fb_login_protocol_scheme">fb429311136106230</string>
    <string name="facebook_client_token">2f13043cae41ddd11e732e3693c0ea4d</string>
    <string name="home">Home</string>
    <string name="payments">Payments</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="reservations">Reservations</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_access_payments_please_log_in_first_you_can_find_the_login_option_in_the_menu">To access this page, please log in first.\nYou can find the login option in the menu.</string>
    <string name="open_menu">Open Menu</string>
    <string name="delete_card">Delete card</string>
    <string name="card_image">Card Image</string>
    <string name="about_desc">
        Pickcourt is a versatile mobile application designed to simplify the process of renting sports courts for various games, including tennis, football, and more.
        This platform caters to sports enthusiasts, casual players, and anyone looking to engage in physical activities by providing a seamless way to find and book courts in their vicinity.
        By providing a user-friendly interface and essential features, Pickcourt aims to promote an active lifestyle and make sports more accessible to everyone.
    </string>
    <string name="email_hasshlomi21_gmail_com">Email: hasshlomi21@gmail.com</string>
    <string name="phone_972_54_6995602">Phone: +972 54 6995602</string>
    <string name="date">Date</string>
    <string name="search">Search…</string>
    <string-array name="sports_array">
        <item>Tennis</item>
        <item>Soccer</item>
    </string-array>
</resources>