<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    tools:context=".Activities.Authentication.SignUpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_icon"
        android:layout_width="130dp"
        android:tint="@color/white"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_pickcourt_foreground" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/singup_TITLE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:fontFamily="@font/robotocondensedvariablefontwght"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/singup_TITLE"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_TEXTINPUT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_TEXTINPUT_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_BTN"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/primary_blue" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signup_TEXTVIEW_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_BTN"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="italic"/>


</RelativeLayout>